@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Create Test2::Compare::Negatable
+
 0.000058  2016-08-13 13:06:10-07:00 America/Los_Angeles
 
     - No changes from last trial
